getting user selected products
