# models/product.ts
@@ -1,5 +1,6 @@
 import {Entity, PrimaryGeneratedColumn, Column, BaseEntity, ManyToOne, OneToMany, ManyToMany, JoinTable} from "typeorm";
 import {Category} from './category';
+import {Card} from './card';
 
 @Entity()
 export class Product extends BaseEntity {
@@ -13,9 +14,13 @@ export class Product extends BaseEntity {
     @Column({type: 'varchar', length: 255,})
     description: string;
 
+    @Column({type: 'int', default: 0})
+    quantity: number;
+
     @ManyToMany(type => Category, category => category.products,
         {cascade: true, eager: true})
     @JoinTable()
     categories: Category[];
+
 
 }
